# small-prime-gap

./: .gitignore  AUDIT.md  AUDITOR_CHECKLIST.md  COQCOMBI_SCAN.md  JACOBI_SCAN.md  L1_SCAN.md  NEXT_STEP.md  PLAN.md  PLAN_42x42.md  PLAN_CertL2.md  PLAN_LAST_ADMIT.md  PLAN_S1.md  PLAN_SLOW_MATHCOMP.md  README.md  REMAINING_ADMITS_PLAN.md  REPORT.md  REVIEW.md  REVIEW_PLAN.md  REVIEW_SYNTHESIS.md  REVIEW_compute.md  REVIEW_devils_advocate.md  REVIEW_spec.md  SPEC_TO_PAPER.md  STATUS.md  TODO.md  _CoqProject  audit_devils_advocate.md  audit_formal_methods.md  audit_mathematician.md  audit_rocq_specialist.md  certificate.json  coq-prime-gap.opam  flint_probe.py  flint_sturm_plan.md  flint_subres.py  m1m2.pkl  math_eigenvalue_target.md  notebook_reconstructed.md  requirements.txt  research_charpoly.md  (+1 more)
.github/workflows/: blueprint.yml
blueprint/: requirements.txt
blueprint/src/: content.tex  print.tex  web.tex
blueprint/src/macros/: common.tex
python/: build_certificate.py  build_pencil_clean.py  build_pencil_determinants.py  build_quad_witness.py  certificate.json  flint_probe.py  generate_primes.py  json_to_v.py
spike/: ScoutRC.v  ScoutSpike.v  Spike.v  SpikeQshared.v  SpikeZ.v  _CoqProject
theories/S1/: AbstractPencilHelper.v  AllRowsLenHelper.v  Bound.v  Bridge.v  BrownTraub.v  CRTBridge.v  CRTCheck.v  CRTFrame.v  CRTFrameDefs.v  CRTFrame_part0.v  CRTFrame_part1.v  CRTFrame_part2.v  CRTFrame_part3.v  CRTFrame_part4.v  CRTFrame_part5.v  CRTFrame_part6.v  CRTFrame_part7.v  CRTLift.v  CRTPencilCheck.v  CRTPencilCheckExt.v  CRTPencilChecksProof.v  CRTPencilExtraChecksProof.v  CRTPencilExtraPrimes.v  CRTPencilExtraPrimesProof.v  CRTPencilExtra_NoDupProof.v  CRTPencilExtra_PrimesProof.v  CRTPencilExtra_ValidProof.v  CRTPencilHadamardGeneric.v  CRTPencilM1Bound.v  CRTPencilPencilBound.v  CRTPrimes.v  CRTSigns.v  Cert.v  CertL1.v  CertL2.v  CertL2_debug.v  CertPencil.v  CertPencilDef.v  CertQuad.v  CertRayleigh.v  (+55 more)
theories/S1/CharPolyAgree/: Chunk_0.v  Chunk_1.v  Chunk_2.v  Chunk_3.v  Chunk_4.v  Chunk_5.v  Def.v
theories/S1/MaynardVerify/: Def.v  M2_0.v  M2_1.v  M2_2.v  M2_3.v  M2_4.v  M2_5.v
tools/: json_to_v.py
